Do not hide mspythonconfig.json
Doing so appears to prevent the Python extension from activating
(i.e., hides from everything, not just explorer UI...)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
     ".devcontainer/": true,
     ".github/": true,
     ".vscode/": true,
-    "mspythonconfig.json": true,
+    //"mspythonconfig.json": true,  // Hiding this will cause Python extension to not activate
     "requirements*.txt": true,
     "util/": true,
     "tests/": true
